reorganized for aws

--- a/notebooks/01_query_aws_inspector.ipynb
+++ b/notebooks/01_query_aws_inspector.ipynb
@@ -2,13 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8382cd85-3352-405e-b225-7b004a2d5de6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import boto3\n",
-    "import json"
+    "import json\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "430f6312-3727-48ff-8975-13140626e7e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"/Users/smitht61/Desktop/cyber/inspector-remediator/\")"
    ]
   },
   {
@@ -19,7 +31,7 @@
    },
    "source": [
     "#### Overview\n",
-    "This notebook is part of developing the `inspector-remediate` package. The package is designed to query package vulnerabilities on EC2 instances and leverage an LLM chosen by the user to recommend remediation. This notebook was used to develop several functions to list AWS Inspector findings, extract relevant details, and prepare the details for an LLM."
+    "This notebook is part of developing the `inspector-remediator` package. The package is designed to query package vulnerabilities on EC2 instances and leverage an LLM chosen by the user to recommend remediation. This notebook was used to develop several functions to get AWS Inspector findings and normalize findings as LLM input."
    ]
   },
   {
@@ -33,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "25c55656-e162-4fc8-a6c7-9b912f0f4ef0",
    "metadata": {},
    "outputs": [],
@@ -52,50 +64,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "960b2eb1-9ec8-4e0c-a25b-3a5336b81142",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_active_findings(client, finding_filter=None):\n",
+    "def get_findings(client, status=\"ACTIVE\"):\n",
     "    \"\"\"\n",
-    "    Query active vulnerability findings from AWS Inspector2.\n",
+    "    Query vulnerability findings from AWS Inspector2.\n",
     "\n",
     "    Args:\n",
     "        client (botocore.client.BaseClient):\n",
     "            A boto3 Inspector2 client.\n",
-    "        finding_filter(dict, optional):\n",
-    "            A filterCriteria override. If None, a default filter returns \n",
-    "            active package vulnerabilities on EC2 instances.\n",
+    "        status(str, optional):\n",
+    "            Filter by `findingStatus` in client.list_findings(). Default\n",
+    "            filters to active findings.\n",
     "\n",
     "    Returns:\n",
-    "        list: A list of Inspector2 findings matching the filter criteria.\n",
+    "        list: A list of Inspector2 findings.\n",
     "    \"\"\"\n",
     "\n",
     "    findings = []\n",
     "    next_token = None\n",
     "\n",
-    "    if finding_filter is None:\n",
-    "        finding_filter = {\n",
-    "            \"findingStatus\": [\n",
-    "                {\n",
-    "                    \"comparison\": \"EQUALS\",\n",
-    "                    \"value\": \"ACTIVE\"\n",
-    "                }\n",
-    "            ],\n",
-    "            \"findingType\": [\n",
-    "                {\n",
-    "                    \"comparison\": \"EQUALS\",\n",
-    "                    \"value\": \"PACKAGE_VULNERABILITY\"\n",
-    "                }\n",
-    "            ],\n",
-    "            \"resourceType\": [\n",
-    "                {\n",
-    "                    \"comparison\": \"EQUALS\",\n",
-    "                    \"value\": \"AWS_EC2_INSTANCE\"\n",
-    "                }\n",
-    "            ]\n",
-    "        }\n",
+    "    finding_filter = {\n",
+    "        \"findingStatus\": [\n",
+    "            {\n",
+    "                \"comparison\": \"EQUALS\",\n",
+    "                \"value\": status\n",
+    "            }\n",
+    "        ],\n",
+    "        \"findingType\": [\n",
+    "            {\n",
+    "                \"comparison\": \"EQUALS\",\n",
+    "                \"value\": \"PACKAGE_VULNERABILITY\"\n",
+    "            }\n",
+    "        ],\n",
+    "        \"resourceType\": [\n",
+    "            {\n",
+    "                \"comparison\": \"EQUALS\",\n",
+    "                \"value\": \"AWS_EC2_INSTANCE\"\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
     "    \n",
     "    while True:\n",
     "        if next_token:\n",
@@ -119,20 +130,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4a9e7a9e-9555-4c9b-a887-bed9f9bd5cac",
+   "execution_count": 6,
+   "id": "3b0290c7-f3f8-4345-9416-f7ae618a2cf6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "active_findings = get_active_findings(client)"
+    "active_findings = get_findings(client)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "765cf001-23f4-4a49-859e-8ab8819d7d61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CVE-2025-39964 - linux-image-aws\n",
+      "CVE-2024-36357 - amd64-microcode\n",
+      "CVE-2024-36350 - amd64-microcode\n",
+      "CVE-2025-39993 - linux-image-aws\n",
+      "CVE-2025-40018 - linux-image-aws\n",
+      "CVE-2025-39946 - linux-image-aws\n"
+     ]
+    }
+   ],
    "source": [
     "for f in active_findings:\n",
     "    print(f[\"title\"])"
@@ -144,12 +168,12 @@
    "metadata": {},
    "source": [
     "#### Normalize Finding Details for LLM\n",
-    "The following function extracts relevant fields from a finding and returns them as a JSON object."
+    "The following function extracts relevant fields from a finding and returns them as a dictionary, which is easily convertible to JSON for LLM input."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "d7c8f559-74ab-4d98-9f36-7a823cca8f01",
    "metadata": {},
    "outputs": [],
@@ -174,17 +198,24 @@
     "            - package\n",
     "            - references\n",
     "    \"\"\"\n",
-    "\n",
+    "    # finding\n",
     "    pvd = finding.get(\"packageVulnerabilityDetails\", {}) or {}\n",
     "    vuln_id = pvd.get(\"vulnerabilityId\")\n",
-    "    vulnerable_packages = pvd.get(\"vulnerablePackages\") or []\n",
-    "    pkg = vulnerable_packages[0] if vulnerable_packages else {}\n",
     "\n",
+    "    # resource\n",
     "    resources = finding.get(\"resources\") or []\n",
     "    r0 = resources[0] if resources else {}\n",
     "    r_details = r0.get(\"details\", {}) or {}\n",
     "    ec2 = r_details.get(\"awsEc2Instance\", {}) or {}\n",
     "\n",
+    "    real_account_id = finding.get(\"awsAccountId\")\n",
+    "    real_instance_id = r0.get(\"id\") or ec2.get(\"instanceId\")\n",
+    "\n",
+    "    # package\n",
+    "    vulnerable_packages = pvd.get(\"vulnerablePackages\") or []\n",
+    "    pkg = vulnerable_packages[0] if vulnerable_packages else {}\n",
+    "    \n",
+    "    # references\n",
     "    refs = pvd.get(\"referenceUrls\") or []\n",
     "    remediation = finding.get(\"remediation\") or {}\n",
     "    remediation_url = remediation.get(\"url\")\n",
@@ -199,9 +230,9 @@
     "        \"severity\": finding.get(\"severity\"),\n",
     "        \n",
     "        \"resource\": {\n",
-    "            \"account_id\": finding.get(\"awsAccountId\"),\n",
+    "            \"account_id\": real_account_id,\n",
     "            \"region\": r0.get(\"region\"),\n",
-    "            \"instance_id\": r0.get(\"id\") or ec2.get(\"instanceId\"),\n",
+    "            \"instance_id\": real_instance_id,\n",
     "            \"os\": ec2.get(\"platformDetails\") or ec2.get(\"platform\")\n",
     "        },\n",
     "        \n",
@@ -210,6 +241,7 @@
     "            \"installed_version\": pkg.get(\"installedVersion\") or pkg.get(\"version\"),\n",
     "            \"fixed_version\": pkg.get(\"fixedVersion\") or pkg.get(\"fixedInVersion\"),\n",
     "        },\n",
+    "        \n",
     "        \"references\": refs,\n",
     "    }\n",
     "\n",
@@ -218,24 +250,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "7005cc30-fda0-4029-9c4f-bca207a31b3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm_payload = [normalize_finding_for_llm(f) for f in package_findings]"
+    "llm_payload = [normalize_finding_for_llm(f) for f in active_findings]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2ddb2bc6-95ae-4c22-b1a8-4c632bb4be31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total findings in payload: 6\n",
+      "\n",
+      "First finding in payload:\n",
+      "\n",
+      "{\n",
+      "  \"finding_arn\": \"arn:aws:inspector2:us-west-2:675895556060:finding/488b9a1906981fa14dcd297cfc8dbdfb\",\n",
+      "  \"cve\": \"CVE-2025-39964\",\n",
+      "  \"title\": \"CVE-2025-39964 - linux-image-aws\",\n",
+      "  \"description\": \"In the Linux kernel, the following vulnerability has been resolved: crypto: af_alg - Disallow concurrent writes in af_alg_sendmsg Issuing two writes to the same af_alg socket is bogus as the data will be interleaved in an unpredictable fashion. Furthermore, concurrent writes may create inconsistencies in the internal socket state. Disallow this by adding a new ctx->write field that indiciates exclusive ownership for writing.\",\n",
+      "  \"severity\": \"MEDIUM\",\n",
+      "  \"resource\": {\n",
+      "    \"account_id\": \"675895556060\",\n",
+      "    \"region\": \"us-west-2\",\n",
+      "    \"instance_id\": \"i-0203a0c192fab5fa2\",\n",
+      "    \"os\": \"UBUNTU_24_04\"\n",
+      "  },\n",
+      "  \"package\": {\n",
+      "    \"name\": null,\n",
+      "    \"installed_version\": \"6.14.0\",\n",
+      "    \"fixed_version\": \"0:6.14.0-1018.18~24.04.1 (pending)\"\n",
+      "  },\n",
+      "  \"references\": [\n",
+      "    \"https://git.kernel.org/stable/c/0f28c4adbc4a97437874c9b669fd7958a8c6d6ce\",\n",
+      "    \"https://ubuntu.com/security/notices/USN-7907-4\",\n",
+      "    \"https://ubuntu.com/security/notices/USN-7907-3\",\n",
+      "    \"https://git.kernel.org/stable/c/9aee87da5572b3a14075f501752e209801160d3d\",\n",
+      "    \"https://ubuntu.com/security/notices/USN-7907-2\",\n",
+      "    \"https://git.kernel.org/stable/c/1b34cbbf4f011a121ef7b2d7d6e6920a036d5285\",\n",
+      "    \"https://git.kernel.org/stable/c/7c4491b5644e3a3708f3dbd7591be0a570135b84\",\n",
+      "    \"https://git.kernel.org/stable/c/e4c1ec11132ec466f7362a95f36a506ce4dc08c9\",\n",
+      "    \"https://www.cve.org/CVERecord?id=CVE-2025-39964\",\n",
+      "    \"https://ubuntu.com/security/notices/USN-7907-1\",\n",
+      "    \"https://git.kernel.org/linus/1b34cbbf4f011a121ef7b2d7d6e6920a036d5285(6.17-rc7)\",\n",
+      "    \"https://people.canonical.com/~ubuntu-security/cve/2025/CVE-2025-39964.html\",\n",
+      "    \"https://git.kernel.org/stable/c/45bcf60fe49b37daab1acee57b27211ad1574042\",\n",
+      "    \"https://git.kernel.org/stable/c/1f323a48e9b5ebfe6dc7d130fdf5c3c0e92a07c8\"\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Total findings in payload: {len(llm_payload)}\\n\")\n",
+    "print(\"First finding in payload:\\n\")\n",
+    "print(json.dumps(llm_payload[0], indent=2))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ddb2bc6-95ae-4c22-b1a8-4c632bb4be31",
+   "id": "160e374f-b2ed-4006-a9a9-15ef23b2509c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Total findings in payload: {len(llm_payload)}\\n\")\n",
-    "print(\"First finding in payload:\\n\")\n",
-    "print(json.dumps(llm_payload[0], indent=2))"
+    "import json\n",
+    "import boto3\n",
+    "\n",
+    "BUCKET_NAME = \"inspector-remediation\"\n",
+    "\n",
+    "def lambda_handler(event, context):\n",
+    "    s3 = boto3.client(\"s3\")\n",
+    "\n",
+    "    finding = event.get(\"detail\", {})\n",
+    "    title = finding.get(\"title\", \"unknown_finding\")\n",
+    "\n",
+    "    object_key = f\"{title}.json\"\n",
+    "\n",
+    "    try:\n",
+    "        s3.put_object(\n",
+    "            Bucket=BUCKET_NAME,\n",
+    "            Key=object_key,\n",
+    "            Body=json.dumps(finding, indent=2),\n",
+    "            ContentType=\"application/json\"\n",
+    "        )\n",
+    "        print(f\"Successfully uploaded {object_key} to s3://{BUCKET_NAME}\")\n",
+    "        return {\"status\": \"success\", \"key\": object_key}\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error uploading object: {e}\")\n",
+    "        raise"
    ]
   }
  ],
